# webapp-broinfo

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Makefile  README.md  memo.md
assets/styling/: info.css  main.css
data/: broinfo.android-emu.Pixcel4.appli.txt  broinfo.android-emu.Pixcel4.browser.txt  broinfo.android.S5-SH.appli.txt  broinfo.android.S5-SH.browser.txt  broinfo.linux.desktop.appli.txt  broinfo.linux.desktop.firefox.txt
data2/: broinfo.android-emu.Pixcel4.appli.txt  broinfo.android-emu.Pixcel4.browser.txt  broinfo.android-emu.Pixcel7.appli.txt  broinfo.android-emu.Pixcel7.browser.txt  broinfo.android.S5-SH.appli.txt  broinfo.android.S5-SH.browser.txt  broinfo.linux.desktop.appli.txt  broinfo.linux.desktop.chrome.txt  broinfo.linux.desktop.firefox.txt  broinfo.windows.desktop.edge.txt  broinfo.windows.desktop.firefox.txt  user_agent.android-emu.Pixcel4.appli.txt  user_agent.android-emu.Pixcel7.appli.txt  user_agent.android-emu.Pixcel7.browser.txt  user_agent.android.S5-SH.appli.txt  user_agent.android.S5-SH.browser.txt  user_agent.linux.desktop.appli.txt  user_agent.linux.desktop.chrome.txt  user_agent.linux.desktop.firefox.txt  user_agent.windows.desktop.edge.txt
docs/: review.1.md  review.2.md  review.3.md
resources/android/res.0/mipmap-anydpi/: ic_launcher.xml
scripts/: android-webview-assets-params.toml  android-webview-params.toml  apk-icon-assemble-r.sh
src/: main.rs
src/backends/: mod.rs
src/components/: echo.rs  info.rs  mod.rs
src/views/: home.rs
